# supplier-cleaner

./: README.md  pyproject.toml  readme.MD  requirements.txt
analysis/data/: supplier_cleaning_synthetic_250_exact.csv
analysis/scripts/: run_evaluation.py
app/: app.py
data/: synthetic_pairs.csv
scripts/: generate_synthetic.py  run_evaluation.py
src/supplier_cleaner/: app.py  evaluate.py  grouping.py  preprocessing.py
tests/: test_evaluate.py  test_integration.py  test_preprocessing.py
