[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "supplier-cleaner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "networkx",
    "scikit-learn",
    "rapidfuzz",
    "numpy",
    "pandas",
    "openpyxl",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]